sorted the issues with the effects being massive and not fitting the screen properly

--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,13 @@
 #root {
   height: 100vh;
 }
+#root,
 body,
 html {
   margin: 0;
+  padding: 0;
   height: 100%;
-  font-family: Arial, Helvetica, sans-serif;
-}
-h1 {
-  text-align: center;
-}
-
-p {
-  text-align: center;
+  width: 100%;
+  overflow: hidden;
+  background-color: gray;
 }
