--- a/src/Swiper-Demos/Slider.css
+++ b/src/Swiper-Demos/Slider.css
@@ -1,12 +1,3 @@
-#app {
-  height: 100%;
-}
-html,
-body {
-  position: relative;
-  height: 100%;
-}
-
 body {
   background: #000;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -26,7 +17,6 @@ body {
   font-size: 18px;
   background: #444;
 
-  /* Center slide text vertically */
   display: flex;
   justify-content: center;
   align-items: center;
